<resources>
    <string name="app_name">EStoreID</string>
    <string name="loading">Loading...</string>
    <string name="email_mobile_number">Email/Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_to_estore">New to eStore?</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="forgot">Forgot Password</string>
    <string name="forgot_your_password_f">FORGOT YOUR PASSWORD?</string>
    <string name="about_forgot_password">Enter your email below to receivce your\n password reset instructions</string>
    <string name="submit">Submit</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_have_read_all_the">I have read all the</string>
    <string name="terms_condition"><u>Terms &amp; Condition</u></string>
    <string name="and">and</string>
    <string name="privacy"><u>Privacy Policy</u></string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="my_favorite_store">My Favorite Store</string>
    <string name="my_orders">My Orders</string>
    <string name="cancel_order">Are you sure you\nwant to cancel\norder #401215</string>
    <string name="order_delete">If you deleted it will not appeare in\n your order list anymore.</string>
    <string name="my_account">My Account</string>
    <string name="home_address">HOME ADDRESS</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="payment">Payment</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="o_cancel_order">Cancel Order</string>
    <string name="o_yes">Yes, Cancel Order</string>
    <string name="o_no">No, I want to keep it.</string>
    <string name="c_cart">Cart</string>
    <string name="c_sub_total">Sub total</string>
    <string name="c_tax">Tax(15%)</string>
    <string name="c_delivery_charge">Delivery Charge</string>
    <string name="c_total">Total</string>
    <string name="c_checkout">Checkout</string>
    <string name="c_related_products">Related products</string>
    <string name="c_safe">Safe and secure payments 100% \nAuthentic products.</string>
    <string name="ch_checkout">Checkout</string>
    <string name="p_change_password">Change Password</string>
    <string name="p_old_password">Old Password</string>
    <string name="p_new_password">New Password</string>
    <string name="p_confrim_new_password">Confrim New Password</string>
    <string name="p_reset_password">Reset Password</string>
    <string name="e_edit_profile">Edit Profile</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="update">Update</string>
    <string name="m_home">Home</string>
    <string name="m_your_location">Your Location</string>
    <string name="m_current_location">Current location</string>
    <string name="m_change"><u>Change</u></string>
    <string name="m_select_current_location"><u>Select current location</u></string>
    <string name="m_sort_by">Sort by</string>
    <string name="m_filter">Filter</string>
    <string name="m_homenumber">HomeNumber</string>
    <string name="m_street">Street</string>
    <string name="m_city_state">City/State</string>
    <string name="m_pincode">Pincode</string>
    <string name="m_office">Office</string>
    <string name="m_other">Other</string>
    <string name="m_save">Save</string>
    <string name="a_username">UserName</string>
    <string name="a_gender">Gender</string>
    <string name="a_date_of_birth">Date of birth</string>
    <string name="d_order_details">Order Details</string>
    <string name="d_sub_total">Sub-Total</string>
    <string name="d_tax">Tax</string>
    <string name="d_delivery">Delivery</string>
    <string name="d_total">Total</string>
    <string name="d_cancel_order">Cancel Order</string>
    <string name="order_placed">Order Placed!</string>
    <string name="tab">Your order was placed successfully. For more details, check All My Orders page under Profile tab</string>
    <string name="my_order">MY ORDERS</string>
    <string name="product_details">Product Details</string>
    <string name="description">Description</string>
    <string name="select_size">Select Size</string>
    <string name="select_colour">Select Colour</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="products">Products</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="write_feedback">Write feedback</string>

    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_phone">Update Phone</string>
    <string name="change_password">Change Password</string>
    <string name="terms_conditions">Terms Condition</string>
    <string name="terms_amp_conditions">Terms &amp; Conditions></string>
    <string name="change_phone_number">Change Phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="save_for_later">Save for later</string>
    <string name="from_boots_category">from boots category</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="googleclientId">AIzaSyBv3FYZuLZJR8mOlONc6hMGqh-Taeo7-7g</string>


    <string name="connected_with_wifi">Connected with wifi</string>
    <string name="connected_with_mobile">Connected with mobile network</string>
    <string name="connected_with_ethernet">Connected with ethernet</string>
    <string name="you_are_offline">Yout are offline.Please check your internet connection.</string>
    <string name="favorities">Favorities</string>

</resources>
