<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange"
    android:orientation="vertical"
    tools:context=".ui.authentication.signupActivity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_18sdp">

            <ImageView
                android:id="@+id/imagelogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/ic_applogo_w" />

            <LinearLayout
                android:id="@+id/layoutUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imagelogo"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imagelogo"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite">

                    <EditText
                        android:id="@+id/editFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imagelogo"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite">

                    <EditText
                        android:id="@+id/editLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutUserName"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutEmail"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/editMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutMobileNumber"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutPassword"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/editConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layoutTearms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayoutConfirmPassword"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/btnRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/colorWhite"
                    android:buttonTint="@color/colorWhite"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:textColor="@color/colorWhite" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/btnRadio">

                    <TextView
                        android:id="@+id/tvRead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:text="@string/i_have_read_all_the"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_9ssp" />

                    <TextView
                        android:id="@+id/tvTermsCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@+id/tvRead"
                        android:text="@string/terms_condition"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_9ssp" />

                    <TextView
                        android:id="@+id/tvand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@+id/tvTermsCondition"
                        android:text="@string/and"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_9ssp" />

                    <TextView
                        android:id="@+id/tvPrivacyPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@+id/tvand"
                        android:text="@string/privacy"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_9ssp" />
                </RelativeLayout>


            </LinearLayout>


            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutTearms"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/background_login"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp" />


            <LinearLayout
                android:id="@+id/layoutSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignup"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp" />'

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>