<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.settings.changePassword.ChnagePasswordActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_black" />

        <TextView
            android:id="@+id/tvTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/p_change_password"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_16ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/_18sdp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputLayoutMobileNumber"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorTextGrey"
            android:theme="@style/MyTheme">

            <EditText
                android:id="@+id/editOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/p_old_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputLayoutOldPassword"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorTextGrey"
            android:theme="@style/MyTheme">

            <EditText
                android:id="@+id/editNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/p_new_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutConfrimNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputLayoutNewPassword"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorTextGrey"
            android:theme="@style/MyTheme">

            <EditText
                android:id="@+id/editConfrimNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/p_confrim_new_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputLayoutConfrimNewPassword"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/background_unfollow"
            android:text="@string/p_reset_password"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</RelativeLayout>