<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.orderPlaced.OrderPlacedActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
  >

        <!--<ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_black" />-->

        <!-- <TextView
             android:id="@+id/tvTittle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="Checkout"
             android:textColor="@color/colorBlack"
             android:textSize="@dimen/_14ssp" />-->

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/_16sdp">

        <ImageView
            android:id="@+id/order_placed_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_18sdp"
            android:src="@drawable/ic_orderplaced" />

        <TextView
            android:id="@+id/orderplace_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_placed_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/order_placed"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/orderplace_decstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/orderplace_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_16ssp"
            android:gravity="center"
            android:text="@string/tab"
            android:textAlignment="center"></TextView>


        <Button
            android:id="@+id/btnMyorders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/orderplace_decstext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_unfollow"
            android:drawableRight="@drawable/ic_next"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingRight="@dimen/_25sdp"
            android:text="@string/my_order"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorWhite"></Button>
    </RelativeLayout>
</RelativeLayout>